--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-html, 
-body, 
-#root, 
-#root > div {
-  height: 100%;
-}
+/* html,  */
+/* body,  */
+/* #root,  */
+/* #root > div { */
+  /* height: 64px; */
+/* } */
