--- a/src/main/index.css
+++ b/src/main/index.css
@@ -10,7 +10,7 @@
 }
 
 #body{
-    height: 100%;
+    height: 100vh;
     width:1024px;
     margin: 0 auto;
     padding-bottom: 24px;
@@ -26,7 +26,7 @@
 }
 #header-area{
     width:1024px;
-    height:10%;
+    height:100%;
     display:flex;
     align-items:center;
 }
@@ -85,4 +85,8 @@
 }
 .product-avatar{
     width:24px;
+}
+.product-link {
+    color: inherit;
+    text-decoration: none;
 }
