--- a/src/main/index.css
+++ b/src/main/index.css
@@ -47,7 +47,7 @@
 .product-seller{
     display:flex;
     align-items: center;
-    margin-top: 12px;
+    font-style: 10px;
 }
 .product-avatar{
     width:24px;
@@ -55,4 +55,16 @@
 .product-link{
     color: inherit;
     text-decoration: none;;
+}
+
+.product-footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 12px;
+}
+
+.product-date{
+    font-size: 14px;
+    color: rgb(136,136,136);
 }
