--- a/src/main/index.css
+++ b/src/main/index.css
@@ -14,40 +14,51 @@
     flex-wrap: wrap;
     margin-top: 12px;
 }
-.product-card{
-    width:180px;
-    height:300px;
+.product-card {
+    width: 180px;
+    height: 300px;
     margin-right: 12px;
     margin-bottom: 12px;
-    border:1px solid rgb(230,230,230);
-    border-radius:12px;
-    overflow: hidden;;
+    border: 1px solid rgb(230, 230, 230);
+    border-radius: 12px;
+    overflow: hidden;
+    position: relative;
+}
+.product-blur {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ffffffaa;
+    pointer-events: none;
+  }
+.product-img {
+    width: 100%;
+    height: auto; /* 자동 높이로 설정 */
+    max-height: 210px; /* 이미지 최대 높이 제한 */
+    object-fit: contain; /* 이미지 전체가 보이도록 */
 }
 
-.product-img{
-    width:100%;
-    height:210px;
-}
-
-.product-contents{
+.product-contents {
     display: flex;
     flex-direction: column;
     padding: 8px;
 }
 
-.product-name{
+.product-name {
     font-size: 14px;
 }
 
-.product-price{
-    font-size:16px;
-    font-weight:600;
+.product-price {
+    font-size: 16px;
+    font-weight: 600;
     margin-top: 4px;
 }
+
 .product-seller{
     display:flex;
     align-items: center;
-    font-style: 10px;
 }
 .product-avatar{
     width:24px;
@@ -67,4 +78,8 @@
 .product-date{
     font-size: 14px;
     color: rgb(136,136,136);
+}
+
+#product-headline {
+    margin-top: 8px;
 }
