--- a/src/product/index.css
+++ b/src/product/index.css
@@ -49,4 +49,9 @@
 }
 #description{
     margin-top: 16px;
+    font-size: 16px;
+}
+#purchase-button {
+  margin-top: 8px;
+  margin-bottom: 16px;
 }
