--- a/src/main/index.css
+++ b/src/main/index.css
@@ -1,10 +1,10 @@
 #banner{
-    height:300px;
+    max-height:300px;
 }
 
 #banner >img{
     width:100%;
-    height:300px;
+    max-height:300px;
 }
 #body >h1 {
     margin-top: 16px;
@@ -35,9 +35,9 @@
   }
 .product-img {
     width: 100%;
-    height: auto; /* 자동 높이로 설정 */
-    max-height: 210px; /* 이미지 최대 높이 제한 */
-    object-fit: contain; /* 이미지 전체가 보이도록 */
+    height: auto; 
+    max-height: 210px; 
+    object-fit: contain; 
 }
 
 .product-contents {
