--- a/src/product/index.css
+++ b/src/product/index.css
@@ -1,55 +1,55 @@
-
-
-#image-box{
-    height: 300px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+#image-box {
+  max-height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-#image-box > img{
-    height: 100%;
+#image-box > img {
+  width: 100%;
+  max-height: 300px;
+  object-fit: contain;
 }
 
-#profile-box{
-    padding: 16px;
-    margin-top: 8px;
-    border-bottom: 1px solid #e9ecef;
-    display:flex;
-    align-items: center;
+#profile-box {
+  padding: 16px;
+  margin-top: 8px;
+  border-bottom: 1px solid #e9ecef;
+  display: flex;
+  align-items: center;
 }
 
-#profile-box >img{
-    width: 50px;
-    height: 50px;
+#profile-box > img {
+  width: 50px;
+  height: 50px;
 }
 
-#profile-box >span{
-    font-size: 15px;
-    margin-left: 8px;
-    font-weight: 600;
+#profile-box > span {
+  font-size: 15px;
+  margin-left: 8px;
+  font-weight: 600;
 }
 
-#contents-box{
-    padding: 16px;
+#contents-box {
+  padding: 16px;
 }
 
-#name{
-    font-size: 20px;
-    font-weight: 400;
+#name {
+  font-size: 20px;
+  font-weight: 400;
 }
 
-#price{
-    font-size: 16px;
-    font-weight: 600;
+#price {
+  font-size: 16px;
+  font-weight: 600;
 }
-#createdAt{
-    font-size: 12px;
-    color: rgb(187, 187, 187);
+#createdAt {
+  font-size: 12px;
+  color: rgb(187, 187, 187);
 }
-#description{
-    margin-top: 16px;
-    font-size: 16px;
+#description {
+  margin-top: 16px;
+  font-size: 16px;
 }
 #purchase-button {
   margin-top: 8px;
