--- a/src/product/index.css
+++ b/src/product/index.css
@@ -1,14 +1,21 @@
 #image-box {
-  max-height: 300px;
+  width: 100%;
+  height: 500px;
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
 }
 
 #image-box > img {
-  width: 100%;
+  max-width: 90%;
   max-height: 300px;
   object-fit: contain;
+  border-radius: 4px;
 }
 
 #profile-box {
@@ -32,8 +39,9 @@
 
 #contents-box {
   padding: 16px;
+  max-width: 1200px;  /* 최대 너비 설정 */
+  margin: 0 auto;  /* 중앙 정렬 */
 }
-
 #name {
   font-size: 20px;
   font-weight: 400;
@@ -58,4 +66,14 @@
 
 #description-box{
     min-height: 150px;
+}
+#reviews-box {
+  margin-top: 20px;
+  border-top: 1px solid #e8e8e8;
+  padding-top: 20px;
+}
+
+.review-item {
+  border-bottom: 1px solid #e8e8e8;
+  padding: 10px 0;
 }
