--- a/src/main/index.css
+++ b/src/main/index.css
@@ -30,7 +30,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ffffffaa;
+    background-color: gainsboro;
     pointer-events: none;
   }
 .product-img {
