--- a/src/login/index.css
+++ b/src/login/index.css
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #f5f5f5;
+    background-color: white;
   }
   
   .login-card {
